--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,7 @@ body {
   width: 85vw;
   height: 100vh;
   max-width: $maxWidth;
+  outline: none;
   line-height: 2;
 
   .dropbtn {
@@ -77,6 +78,8 @@ body {
     display: none;
     position: relative;
     width: 100%;
+    margin: 0;
+    padding: 0;
     z-index: 1;
 
     max-height: 60%;
