--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,13 @@ body {
   outline: none;
   line-height: 2;
 
+  .button {
+    background: none;
+    border: none;
+    box-shadow: none;
+    font-size: 14px;
+  }
+
   .dropbtn {
     width: 100%;
     background-color: $dropbtnBgColor;
@@ -81,6 +88,7 @@ body {
 
   .dropdown-content {
     display: none;
+    flex-direction: column;
     position: relative;
     width: 100%;
     margin: 0;
@@ -95,11 +103,10 @@ body {
 
     &.show {
       display: flex;
-      flex-direction: column;
     }
 
     .item,
-    .resultsCount {
+    .results-count {
       color: black;
       padding: 12px 16px;
       text-decoration: none;
@@ -111,12 +118,14 @@ body {
       }
     }
 
-    .resultsCount {
+    .results-count {
       position: fixed;
       align-self: flex-end;
       max-width: calc(#{$maxWidth} - 50px);
       background: rgba(0, 0, 0, 0.15);
       user-select: none;
+      padding: 10px 16px;
+      margin: 10px 0;
     }
   }
 }
