--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 $maxWidth: 500px;
-$dropbtnBgColor: #3498db;
+$dropbtnBgColor: #135686;
 $dropbtnWithResultBgColor: #971414;
 $dropbtnWithResultBgColorHover: darken(#971414, 10%);
 $elementFoundColor: darken(#971414, 20%);
@@ -105,27 +105,35 @@ body {
       display: flex;
     }
 
-    .item,
-    .results-count {
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
+    .item {
       display: block;
+      color: black;
+      padding: 10px 16px;
+      text-decoration: none;
       cursor: pointer;
       &.found {
         color: $elementFoundColor;
         background-color: $elementFoundBgColor;
       }
+      .title {
+        font-size: 1.2em;
+        font-weight: normal;
+        margin: 0;
+      }
     }
 
     .results-count {
+      display: block;
       position: fixed;
       align-self: flex-end;
       max-width: calc(#{$maxWidth} - 50px);
       background: rgba(0, 0, 0, 0.15);
       user-select: none;
+      color: black;
+      text-decoration: none;
       padding: 10px 16px;
       margin: 10px 0;
+      cursor: pointer;
     }
   }
 }
